--- a/changelog.txt
+++ b/changelog.txt
@@ -8,4 +8,4 @@ Version 1.0.5 - 2009.11.10
 [UPDATED] test/demo HTML files to work with new TS_ATTR
 [UPDATE] minified version of javascript compiled with Google's Closure Tools (new)
 [FIXED] setting behavior is not as desired THEREFORE updated settings (temporarily) to be DESTRUCTIVE between updates
-[FEATURE] added languages.txt to act as repository for all language translations for the CuteTime  time cuteness translations
+[FEATURE] added translations.txt to act as repository for all language translations for the CuteTime cuteness translations
