--- a/changelog.txt
+++ b/changelog.txt
@@ -9,3 +9,17 @@ Version 1.0.5 - 2009.11.10
 [UPDATE] minified version of javascript compiled with YUI Compressor (new)
 [FIXED] setting behavior is not as desired THEREFORE updated settings (temporarily) to be DESTRUCTIVE between updates
 [FEATURE] added translations.txt to act as repository for all language translations for the CuteTime cuteness translations (special thanks to Vincent Rolfs)
+
+Version 1.0.6 - 2009.11.19
+[FEATURE] added Spansish time translation to the translations.txt file (courtesy of Alex Hernandez)
+
+Version 1.1 - 2009.11.26
+[FEATURE] implemented case-sensitive variable %CT% that can be used anywhere within the cuteness strings; if not specified, and number insertion is called for, then prepends number to provided string; if no number is called for, then the %CT% is removed from the final string
+[FEATURE] added support for foreign language characters and HTML within the cuteness strings
+[FEATURE] accepts timestamps in format compatible with either/both JavaScript Date() Object as well as ISO8601
+[UPDATED] test/demo files to also demo foreign language and %CT%
+[UPDATED] test/demo files to also demo ISO8601
+[FEATURE] settings can be submitted as parameter to CuteTime function call
+[FEATURE] added French time translation to the translations.txt file (courtesy of Bruno Morency)
+[FIXED] documentation to indicate that Number.NEGATIVE_INFINITY and Number.POSTIVE_INFINITY should be used within the bounds
+[TODO] support more than 1 refresh timer per page [use jQuery.data()]
