--- a/changelog.txt
+++ b/changelog.txt
@@ -29,3 +29,6 @@ Version 1.1.1 - 2010.02.01
 
 Version 1.1.2 - 2010.02.03
 [FEATURE] added Portuguese time translation to the translations.txt file (courtesy of Carlos Moutinho)
+
+Version 1.1.3 - 2010.04.06
+[FIXED] bug whereby non-negative UTC offsets were appearing in 'the future!' (thanks to Sébastien Roger) 
